--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>0.1.20-SNAPSHOT</version>
 
     <name>Ikora Core: Robot Framework Engine</name>
-    <url>https://github.com/UL-SnT-Serval/ikora-core</url>
+    <url>https://github.com/serval-uni-lu/ikora-core</url>
 
     <description>
         In its current version this engine allows to parse simple Robot Framework projects but is still missing
@@ -15,10 +15,10 @@
     </description>
 
     <scm>
-        <connection>scm:git:git://github.com/UL-SnT-Serval/ikora-core.git</connection>
+        <connection>scm:git:git://github.com/serval-uni-lu/ikora-core.git</connection>
         <developerConnection>scm:git:git@github.com:kabinja/kabinja.git</developerConnection>
-        <url>https://github.com/UL-SnT-Serval/ikora-core</url>
-        <tag>ikora-core-0.1.13</tag>
+        <url>https://github.com/serval-uni-lu/ikora-core</url>
+        <tag>HEAD</tag>
     </scm>
 
     <licenses>
