--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,11 +19,11 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 17
         if: steps.cache-m2.outputs.cache-hit != 'true'
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 17
 
       - name: Run tests with Maven
         if: steps.cache-m2.outputs.cache-hit != 'true'
@@ -31,16 +31,16 @@ jobs:
 
   coverage:
     runs-on: ubuntu-latest
-    name: Jacoco analysis (Java 8)
+    name: Jacoco analysis
     needs: [ cache ]
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 1.8
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 17
 
       - name: Load Cached m2
         uses: actions/cache@v2
@@ -72,16 +72,16 @@ jobs:
 
   sonarcloud:
     runs-on: ubuntu-latest
-    name: Sonar analysis (Java 11)
+    name: Sonar analysis
     needs: [ cache ]
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 17
 
       - name: Load Cached m2
         uses: actions/cache@v2
