--- a/pom.xml
+++ b/pom.xml
@@ -150,12 +150,12 @@
                     <dependency>
                         <groupId>org.apache.maven.scm</groupId>
                         <artifactId>maven-scm-api</artifactId>
-                        <version>1.12.2</version>
+                        <version>2.0.0-M2</version>
                     </dependency>
                     <dependency>
                         <groupId>org.apache.maven.scm</groupId>
                         <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.12.2</version>
+                        <version>2.0.0-M2</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -177,7 +177,7 @@
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>4.1</version>
+                <version>4.2.rc3</version>
                 <configuration>
                     <properties>
                         <inceptionYear>2019</inceptionYear>
@@ -247,7 +247,7 @@
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>3.3.1</version>
                         <configuration>
-                            <source>8</source>
+                            <source>17</source>
                         </configuration>
                         <executions>
                             <execution>
@@ -314,21 +314,21 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.9.0</version>
+            <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.9.0</version>
+            <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.17.2</version>
+            <version>2.19.0</version>
             <scope>test</scope>
         </dependency>
 
@@ -354,13 +354,13 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.3</version>
+            <version>2.14.0-rc2</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
-            <version>2.13.3</version>
+            <version>2.14.0-rc2</version>
         </dependency>
 
         <dependency>
